--- a/src/style/_calendar.scss
+++ b/src/style/_calendar.scss
@@ -13,7 +13,7 @@
 
   .calendar {
     background-color: $white;
-    border: 1px solid $border-cta;
+    border: 1px solid $btn-border;
     padding: 30px 5px 3px;
     border-radius: 6px;
 
