--- a/src/style/_colors.scss
+++ b/src/style/_colors.scss
@@ -4,5 +4,17 @@ $white: #fff;
 $header: #fff;
 
 $secondary: #1947A0;
-$border-cta: #dde7fa;
 $red: red;
+
+// Fonts
+
+$btn-main-font: 0.875rem;
+
+// Buttons
+
+$btn-bgc: #1947A0;
+$btn-border: #dde7fa;
+$btn-text-hover: #fff;
+
+$btn-nav-link-hover: #1947A0;
+$btn-nav-link-active: #1947A0;
