--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -1,44 +1,69 @@
 @import "colors";
 
-.container-header {
-  width: 100%;
-  max-width: 1366px;
-  margin: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.logo {
-  width: 200px;
-  text-decoration: none;
-  font-family: "Poppins SemiBold",sans-serif;
-  font-size: 1.375rem;
-  color: $black;
-}
-
 .header {
   z-index: 999;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px;
+  padding: 1.25rem;
   background-color: $header;
-  box-shadow: 0 2px 20px rgba(44, 62, 154, .05);
+  box-shadow: 0 2px 20px rgba(44, 62, 154, 0.05);
   top: 0;
   position: sticky;
-  @media screen and (max-width: 768px) {
-    padding: 12px;
+  @media screen and (max-width: 992px) {
+    padding: 0.75rem;
   }
 
-  h1 {
-    margin: 0;
+  .container__header {
+    width: 100%;
+    max-width: 1366px;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .logo {
+    width: 200px;
+    text-decoration: none;
     font-family: "Poppins SemiBold", sans-serif;
-    color: #000000;
+    font-size: 1.375rem;
+    color: $black;
+    .company-brand {
+      margin: 0;
+    }
+  }
+
+  .wrapper__nav {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    gap: 0.781rem;
+
+    @media screen and (max-width: 992px) {
+      flex-direction: row;
+      gap: 10px;
+    }
+  }
+
+  .wrapper__btns--nav {
+    display: flex;
+    gap: 1.25rem;
+
+    @media screen and (max-width: 992px) {
+      gap: 0.625rem;
+    }
+
+    .btn__secondary {
+      @media screen and (max-width: 768px) {
+        display: none;
+      }
+    }
   }
 
   .navigation {
+
     ul.nav-list {
       list-style: none;
       display: flex;
@@ -46,8 +71,6 @@
       align-items: center;
 
       li.nav-item {
-        margin-right: 20px;
-
         a {
           text-decoration: none;
           color: $black;
@@ -55,8 +78,17 @@
           font-family: "Poppins Medium", sans-serif;
 
           &:hover {
-            color: #666666;
+            color: $btn-nav-link-hover;
           }
+
+          &.active {
+            color: $btn-nav-link-active;
+          }
+        }
+      }
+      .btn__secondary {
+        @media screen and (min-width: 769px) {
+          display: none;
         }
       }
     }
@@ -64,6 +96,7 @@
     &.open {
       ul.nav-list {
         display: block;
+        border-top: 1px solid #dde7fa;
       }
     }
 
@@ -102,53 +135,39 @@
       ul.nav-list {
         display: none;
         list-style: none;
-        padding: 0;
-        margin-top: 10px;
+        padding: 0.75rem;
+        margin-top: 0.625rem;
+        position: absolute;
+        left: 0;
+        right: 0;
+        background-color: $white;
 
         &.open {
           display: block;
+          width: 100%;
+
+          @media screen and (max-width: 992px) {
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            flex-direction: column;
+            width: 100%;
+          }
         }
 
         li.nav-item {
-          margin: 10px 0;
+          margin: 0.625rem 0;
 
           a {
             color: $black;
             font-weight: bold;
 
             &:hover {
-              color: #007bff;
+              color: $btn-nav-link-hover;
             }
           }
         }
       }
     }
   }
-}
-
-.cart-icon {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 10px;
-  background-color: rgba(221, 231, 250, 1);
-  color: $secondary;
-  border: 1px solid $border-cta;
-  border-radius: 40px;
-  padding: 12px 25px;
-  font-family: "Poppins SemiBold" , sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  line-height: 1.5;
-  cursor: pointer;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-.cart-counter {
-  display: flex;
-  align-items: center;
-  padding: 2px 13px;
-  background-color: $white;
-  border-radius: 11px;
 }
