--- a/src/style/_woda.scss
+++ b/src/style/_woda.scss
@@ -74,7 +74,7 @@
   text-transform: uppercase;
   background-color: rgba(221, 231, 250, 1);
   color: $secondary;
-  border: 1px solid $border-cta;
+  border: 1px solid $btn-border;
   border-radius: 40px;
   padding: 12px 25px;
   font-family: "Poppins SemiBold", sans-serif;
